<resources>
    <string name="app_name">MQ</string>
    <string name="title">如有bug反馈到:994173459\n显示系统App会有些bug\n点我一键强制关闭需Hook的应用</string>
    <string name="Launcher">Launcher设置</string>
    <string name="Launcher_AD_title">关闭桌面广告</string>
    <string name="Launcher_AD_message">桌面会清洁很多</string>
    <string name="Launcher_Search_title">关闭桌面搜索栏</string>
    <string name="Launcher_Search_message">关闭桌面搜索栏</string>
    <string name="install_title">软件包安装程序设置</string>
    <string name="install_tg_title">自动跳过是否安装提示</string>
    <string name="install_tg_message">自动跳过是否继续安装的提示</string>
    <string name="cloner_titie">应用分身设置</string>
    <string name="colner_show_title">显示系统App</string>
    <string name="colner_show_message">可多开浏览器,设置,图库,文件,相机,主题装扮</string>
    <string name="browser_title">浏览器设置</string>
    <string name="browser_swtich">启动自定义</string>
    <string name="browser_swtich_message">启动自定义浏览器</string>
    <string name="browser_default_title">默认链接设置</string>
    <string name="browser_message">自定义浏览器默认打开链接</string>
</resources>