<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="Kill_pre"
        android:summary="@string/title"/>
    <PreferenceCategory android:title="@string/Launcher">
    <SwitchPreference
        android:title="@string/Launcher_AD_title"
        android:key="LauncherAD"
        android:summary="@string/Launcher_AD_message"/>
    <SwitchPreference
        android:title="@string/Launcher_Search_title"
        android:key="LauncherSearch"
        android:summary="@string/Launcher_Search_message" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/install_title">
        <SwitchPreference
            android:title="@string/install_tg_title"
            android:key="installTG"
            android:summary="@string/install_tg_message" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cloner_titie">
        <SwitchPreference
            android:title="@string/colner_show_title"
            android:key="colnerShow"
            android:summary="@string/colner_show_message" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/browser_title">
        <SwitchPreference
            android:title="@string/browser_swtich"
            android:key="Browserswtich"
            android:summary="@string/browser_swtich_message" />
        <EditTextPreference
            android:title="@string/browser_default_title"
            android:key="Browserdefault"
            android:summary="@string/browser_message"/>
    </PreferenceCategory>
</PreferenceScreen>